--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@nozbe/watermelondb": "^0.28.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
@@ -26,6 +27,7 @@
     "expo-router": "~6.0.17",
     "expo-secure-store": "^15.0.8",
     "expo-splash-screen": "~31.0.12",
+    "expo-sqlite": "^16.0.10",
     "expo-status-bar": "~3.0.9",
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
@@ -47,6 +49,7 @@
     "tailwindcss": "^3.4.18"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.28.0",
     "@types/react": "~19.1.0",
     "babel-preset-expo": "^54.0.8",
     "eslint": "^9.25.0",
