feat: Implement detailed habit and global statistics, integrate EAS build configuration, and refine database initialization.

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-EXPO_PUBLIC_API_URL=https://bbfff073285e.ngrok-free.app/api
+# EXPO_PUBLIC_API_URL=https://1d792713143a.ngrok-free.app/api
+EXPO_PUBLIC_API_URL=https://gtd-api-0xix.onrender.com/api
