--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# EXPO_PUBLIC_API_URL=https://1d792713143a.ngrok-free.app/api
-EXPO_PUBLIC_API_URL=https://gtd-api-0xix.onrender.com/api
+EXPO_PUBLIC_API_URL=https://0e936f088df2.ngrok-free.app/api
+# EXPO_PUBLIC_API_URL=https://gtd-api-0xix.onrender.com/api
